--- a/consumer-service/requirements.txt
+++ b/consumer-service/requirements.txt
@@ -4,3 +4,9 @@ pydantic
 python-dotenv
 requests
 confluent-kafka
+prometheus-client
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-jaeger
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
