--- a/scheduler-service/requirements.txt
+++ b/scheduler-service/requirements.txt
@@ -5,3 +5,9 @@ python-dotenv
 requests
 apscheduler
 pymongo
+prometheus-client
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-exporter-jaeger
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
